# Flask-Official-Tutorial

./: .gitignore  LICENSE  README.md  flaskr.db  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  db.py  main.py  models.py  pydantic_models.py  schemas.py
flaskr/auth/: __init__.py  auth.py  db.py  decorators.py  models.py  schemas.py
flaskr/auth/templates/auth/: login.html  profile_edit.html  register.html
flaskr/blog/: __init__.py  blog.py  models.py  schemas.py  utils.py
flaskr/blog/templates/blog/: author_posts.html  base.html  category.html  contact.html  index.html  post_by_category.html  post_create.html  post_details.html  post_update.html  profile.html  search_result.html  styles.html
flaskr/static/auth/css/: main.css
flaskr/static/blog/css/: main.css
